# HW_WEB_07

./: README.md  alembic.ini  config.ini  my_select.py  pyproject.toml  seed.py
Database/: db.py  models_main.py
alembic/: env.py
alembic/versions/: dd73df129d71_init.py
